--- a/Secret Project/Main.storyboard
+++ b/Secret Project/Main.storyboard
@@ -41,6 +41,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="280" id="RdG-mE-mya"/>
                                 </constraints>
+                                <color key="separatorColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="yee-3n-Cv1">
                                     <rect key="frame" x="0.0" y="228" width="375" height="0.0"/>
